APF-997-Pull request comments fixes. Signed-off-by: Sudharsan Sathiamoorthy<ssathiamoort@vmware.com>